--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 html {
   font-size: 15px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: whitesmoke;
 }
 
 @media(max-width: 1025px) {
